Further API v2 additions - generic Session, bulk create, query builders, new resource types (#15)
---------

Co-authored-by: Ian Halpern <ian@payload.com>